--- a/templates/base.html
+++ b/templates/base.html
@@ -2,20 +2,22 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/libphonenumber.js') }}"></script>
 
     <title>FujiNet Alerting System Registration</title>
   </head>
   <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="#">FujiNet Game Alerting</a>
+  <a class="navbar-brand" href="#">FujiNet Game System Alerting</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+        <a class="nav-link" href="{{ url_for('index') }}">Register</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
