--- a/templates/index.html
+++ b/templates/index.html
@@ -1,41 +1,39 @@
 {% extends 'base.html' %}
-  <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
 
 {% block content %}
 
-  <h1>Phone Number</h1>
-  <h4>US phone numbers only, 10 digits with dashes</h4>
-  <form method="POST">
-    {{ phone_form.hidden_tag() }}
-    <div class="form-group">
-     
-      {{ phone_form.phone_number.label }}
-      {{ phone_form.phone_number(id="phone_number", class="form-control", onblur="validatePhoneNumber()") }}
-    </div>
-    <button type="submit" class="btn btn-primary">Submit US Number</button>
-  </form>
+  <h1>US Phone Number</h1>
+  <h4>US phone numbers only</h4>
+ 
+<form method="POST">
+  {{ phone_form.hidden_tag() }}
+  <div class="form-group">
+    {{ phone_form.phone_number.label }}
+    {{ phone_form.phone_number(id="phone_number", class="form-control phone-input", onblur="validatePhoneNumber()") }}
+  </div>
+  <button type="submit" class="btn btn-primary">Submit US Number</button>
+</form>
 
-  <hr>
+<hr>
 
-  <h1>WhatsApp</h1>
-  <h4>Any WhatsApp Number, globally, no spaces with leading +</h4>
-  <form method="POST">
-    {{ whatsapp_form.hidden_tag() }}
-    <div class="form-group">
-    
-      {{ whatsapp_form.whatsapp_number.label }}
-      {{ whatsapp_form.whatsapp_number(id="whatsapp_number", class="form-control", onblur="validateWhatsAppNumber()") }}
-    </div>
-    <button type="submit" class="btn btn-primary">Submit WhatsApp Number</button>
-  </form>
-
+<h1>WhatsApp Number</h1>
+<h4>Any WhatsApp Number</h4>
+<form method="POST">
+  {{ whatsapp_form.hidden_tag() }}
+  <div class="form-group">
+    {{ whatsapp_form.whatsapp_number.label }}
+    {{ whatsapp_form.whatsapp_number(id="whatsapp_number", class="form-control phone-input", onblur="validateWhatsAppNumber()") }}
+  </div>
+  <button type="submit" class="btn btn-primary">Submit WhatsApp Number</button>
+</form>
 
 
 
-    <h1>Be notified of new Games</h1>
+
+<h1>Be notified of new Games</h1>
    <p>
-      By submitting this form and then siging up for text messages you consent to 
-       receive notifications and marketing test messages from this system via Twilio. 
+      By submitting this form and then opting in for notifications you consent to 
+       receive messages from this system via Twilio. 
        Consent is not a condition of purchase.
        Messaging and Data Rates may apply. Messaging frequency varies.
     </p>
@@ -47,6 +45,9 @@
     <p> 
 <a class="nav-link" href="{{ url_for('privacy') }}">Privacy Policy</a>
  </p>
+
+
+
 
 {% endblock %}
 
