--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <script src="{{ url_for('static', filename='js/libphonenumber.js') }}"></script>
     <script src="{{ url_for('static', filename='js/imask.js') }}"></script>
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('favicon') }}" />
-//    <script src="https://cdn.jsdelivr.net/npm/imask"></script>
+
 
 <script>
   document.addEventListener('DOMContentLoaded', function () {
@@ -36,33 +36,33 @@ mask: [
  });
 </script>
 
-
-    <title>FujiNet Alerting Systemn</title>
-  </head>
-  <body>
-
-<nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="#">FujiNet Game Alerting</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('index') }}">Register & Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('privacy') }}">Privacy Policy</a>
-      </li>
-        <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('index') }}">Enter your number to register, confirm with the code. Then enter number again here to login and opt-in to receive messages.</a>
-      </li>
+<title>FujiNet Alerting System</title>
  
-    </ul>
-  </div>
+</head>
+<body>
+
+
+<nav class="navbar navbar-dark">
+    <a class="navbar-brand" href="/">FujiNet Game Alerting System</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('index') }}">Register & Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('privacy') }}">Privacy Policy</a>
+        </li>
+       <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('about') }}">About</a>
+        </li>
+      </ul>
+    </div>
 </nav>
 
 
