--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,19 +1,44 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Welcome to your Alerts Dashboard</h1>
+  <h1>Welcome to the Alerts Dashboard</h1>
 
-
+<hr>
+<h3> Player Joins - get a message when a new player joins a game.</h3>
   <form id="optInForm">
     <input type="hidden" name="phone" id="phone" value="{{ phone_number }}">
     <div class="form-check">
       <input class="form-check-input" type="checkbox" name="opt_in" id="opt_in" {% if opt_in_status == 1 %}checked{% endif %}>
       <label class="form-check-label" for="optInRadio">
-        Receive alert messages from FujiNet Game System
+        Receive alert messages for player joins
       </label>
     </div>
   </form>
   
+  <hr>
+  <h3> Server Starts - get a message when a Game Server starts up.</h3>
+  <form id="optInServerForm">
+    <input type="hidden" name="phone" id="phone" value="{{ phone_number }}">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" name="opt_in" id="opt_in" {% if opt_in_status == 1 %}checked{% endif %}>
+      <label class="form-check-label" for="optInRadio">
+        Receive alert messages when Game Servers start
+      </label>
+    </div>
+  </form>
+
+<hr>
+<h3> Limit Messages - check this to limit messages.</h3>
+ <form id="optIn24Form">
+    <input type="hidden" name="phone" id="phone" value="{{ phone_number }}">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" name="opt_in" id="opt_in" {% if opt_in_status == 1 %}checked{% endif %}>
+      <label class="form-check-label" for="optInRadio">
+        Limit - check box to limit to one message every 24 hours.
+      </label>
+    </div>
+  </form>
+
   <script>
     var phone = "{{ phone_number }}";
     document.getElementById('optInForm').addEventListener('change', function() {
@@ -52,7 +77,12 @@
     }
   </script>
 
+
+<hr>
+
 <h2>Delete My Data</h2>
+<h3> Remove your data from Game Alert System</h3>
+
 <form onsubmit="return confirmDeletion();" method="POST" action="{{ url_for('delete_user') }}">
   {{ delete_form.hidden_tag() }}
   {{ delete_form.phone_number.label }}
@@ -61,8 +91,11 @@
 </form>
 
 
+<hr>
 
    <h2>Events</h2>
+   <h3> These are the previous Alerts this system received </h3>
+   <p> Note: you may not have recieved notifications for every event</p>
   <table class="table table-bordered">
     <thead>
       <tr>
